Fix z-index for select2 inside modal

--- a/app/assets/stylesheets/desktop/_select2.scss
+++ b/app/assets/stylesheets/desktop/_select2.scss
@@ -1,3 +1,3 @@
-.select2-container--bootstrap {
+.modal .select2-container--bootstrap {
   z-index: 1100;
 }
