--- a/app/assets/stylesheets/desktop/navbar/_navbar.scss
+++ b/app/assets/stylesheets/desktop/navbar/_navbar.scss
@@ -10,7 +10,7 @@
   height: 60px;
   padding: 0 15px;
   width: 100%;
-  z-index: 1103;
+  z-index: 3;
 }
 
 .navbar--fixed {
